[master]  worked on coach sign up form

--- a/join/index.html
+++ b/join/index.html
@@ -33,14 +33,14 @@
 
     <div class="container">
     	<div class="row">
-    		<div class="col-lg-4 col-offset-1 text-center">
+    		<div class="col-lg-4 col-offset-1 text-center form-box">
     			<h3 class="text-primary">Create a coaching account</h3>
     			<p>
 	    			Easy to understand description about what a coaching account is.
     			</p>
     			<button type="button" class="btn btn-primary btn-large btn-block">Block level button</button>
     		</div>
-    		<div class="col-lg-4 col-offset-2 text-center">
+    		<div class="col-lg-4 col-offset-2 text-center form-box">
     			<h3 class="text-success">Create a normal account</h3>
     			<p>
 	    			Easy to understand description about what a normal account is.
