--- a/login/index.html
+++ b/login/index.html
@@ -33,7 +33,7 @@
 
     <div class="container">
     	<div class="row">
-    		<div class="col-lg-4 col-offset-4">
+    		<div class="col-lg-4 col-offset-4 form-box">
     			<h3 class="text-primary text-center">Login</h3>
     			<form>
 					  <fieldset>
@@ -51,7 +51,6 @@
 					    <button type="submit" class="btn btn-primary btn-large btn-block">Login</button>
 					  </fieldset>
 					</form>
-
     		</div>
     	</div>
     </div><!-- /.container -->
